add translations for navbar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "translate": "Translate",
   "main-page": "Main Page",
   "language": "English",
-  "new-translate": "New translate"
+  "new-translate": "New translate",
+  "nav-main": "Main Page",
+  "nav-about": "About"
 }
