--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "translate": "Перевод",
   "main-page": "Главная страница",
   "language": "Русский",
-  "new-translate": "Новый перевод"
+  "new-translate": "Новый перевод",
+  "nav-main": "Главная",
+  "nav-about": "О сайте"
 }
