feat: add loader and not found page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "language": "Русский",
   "new-translate": "Новый перевод",
   "nav-main": "Главная",
-  "nav-about": "О сайте"
+  "nav-about": "О сайте",
+  "page-not-found": "Страница не найдена"
 }
