--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "language": "English",
   "new-translate": "New translate",
   "nav-main": "Main Page",
-  "nav-about": "About"
+  "nav-about": "About",
+  "page-not-found": "Page not found"
 }
