--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "new-translate": "New translate",
   "nav-main": "Main Page",
   "nav-about": "About",
-  "page-not-found": "Page not found"
+  "page-not-found": "Page not found",
+  "toggle-sidebar": "Toggle sidebar"
 }
