--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "new-translate": "Новый перевод",
   "nav-main": "Главная",
   "nav-about": "О сайте",
-  "page-not-found": "Страница не найдена"
+  "page-not-found": "Страница не найдена",
+  "toggle-sidebar": "Переключить боковую панель"
 }
