--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,7 +7,7 @@
   "nav-main": "Main Page",
   "nav-about": "About",
   "page-not-found": "Page not found",
-  "toggle-sidebar": "Toggle sidebar",
+  "toggle-sidebar": "Toggle",
   "refresh-page": "Refresh page",
   "an-unexpected-error-occurred": "An unexpected error occurred",
   "throw-eror": "Throw eror"
